WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222566
[WinCairo] Building with ENABLE_SERVICE_WORKER=OFF fails
https://bugs.webkit.org/show_bug.cgi?id=222566
Summary
[WinCairo] Building with ENABLE_SERVICE_WORKER=OFF fails
Stephan Szabo
Reported
2021-03-01 11:05:28 PST
It seems after "Make the UserContentController for ServiceWorker pages be non-optional", building without ENABLE_SERVICE_WORKER on WinCairo fails with: Source\WebKit\UIProcess/WebProcessPool.cpp(1014): error C2039: 'userContentControllerIdentifierForServiceWorkers': is not a member of 'WebKit::WebProcessPool' Source\WebKit\UIProcess\Notifications\WebNotificationManagerProxy.h(50): note: see declaration of 'WebKit::WebProcessPool' Source\WebKit\UIProcess/WebProcessPool.cpp(1016): error C2065: 'm_userContentControllerForServiceWorker': undeclared identifier Source\WebKit\UIProcess/WebProcessPool.cpp(1017): error C2065: 'm_userContentControllerForServiceWorker': undeclared identifier Source\WebKit\UIProcess/WebProcessPool.cpp(1019): error C2065: 'm_userContentControllerForServiceWorker': undeclared identifier
Attachments
Patch
(1.48 KB, patch)
2021-03-01 11:20 PST
,
Stephan Szabo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Stephan Szabo
Comment 1
2021-03-01 11:20:32 PST
Created
attachment 421849
[details]
Patch
EWS
Comment 2
2021-03-01 15:06:16 PST
Committed
r273694
: <
https://commits.webkit.org/r273694
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 421849
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-03-01 15:07:19 PST
<
rdar://problem/74893620
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug