[WinCairo] Building with ENABLE_SERVICE_WORKER=OFF fails https://bugs.webkit.org/show_bug.cgi?id=222566

Unreviewed build fix.


* UIProcess/WebProcessPool.cpp: Only compile a method when service
worker is enabled.


Canonical link: https://commits.webkit.org/234715@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273694 268f45cc-cd09-0410-ab3c-d52691b4dbfc